--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
   </dependencies>
   <build>
     <finalName>java-hello-world</finalName>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.8.7</version>
+    </plugin>
   </build>
 </project>
